jsonapi_core/tests/compile_fail/duplicate_id.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "things")]
struct Bad {
    #[jsonapi(id)]
    id: String,
    #[jsonapi(id)]
    other_id: String,
}

fn main() {}
